2004-06-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Added configuration of listened
	ports
	* src/ejabberd_listener.erl: Added API for configuration of port
	listeners

	* src/web/ejabberd_web_admin.erl: Fixed "Stop" button on node
	management page

2004-05-22  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/nl.msg: Dutch translation (thanks to Sander Devrieze)

	* src/web/ejabberd_http.erl: Added options for enabling HTTP
	polling and admin interface
	* src/web/ejabberd_web.erl: Likewise
	* src/ejabberd.cfg.example: Updated

	* src/web/ejabberd_web_admin.erl: Updated

	* doc/guide.tex: Updated

2004-05-17  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc.erl: Added access rules for using serveice
	and creating rooms (thanks to Sergei Golovan)

	* src/win32/ejabberd.nsi: Updated (thanks to Sergei Golovan)
	* src/win32/CheckUserH.ini: Likewise

	* src/translate.erl: Search translations in priv_dir instead of
	lib_dir (thanks to Sergei Golovan)

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)

	* src/ejabberd.cfg.example: Updated (thanks to Sergei Golovan)

	* src/**/Makefile.in: Updated (thanks to Sergei Golovan)
	* src/**/Makefile.win32: Likewise

2004-05-16  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Updated

2004-05-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Updated

2004-05-09  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Updated

	* src/ejabberd_listener.erl: Added API for adding/removing
	listeners

2004-05-08  Alexey Shchepin  <alexey@sevcom.net>

	* doc/guide.tex: Updated

	* src/ejabberd_listener.erl: Now possible to specify interface on
	which one socket will be listened, also added another way to
	specify SSL options
	* src/ejabberd.cfg.example: Updated

2004-05-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Updated (thanks to Andrey
	Zamaraev)
